# BioMed-MCP

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  clinical_trial_example.py  docker-compose.yml  environment.example  pubmed_example.py  pyproject.toml  requirements.txt  test_client.py
biomed_agents/: __init__.py  __main__.py  clinical_agent.py  config.py  pubmed_agent.py  server.py
biomed_agents/tools/: __init__.py  clinical_tools.py  pubmed_tools.py
